2007-10-18  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkactiongroup.xml: fix bug #421575.

2007-10-18  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkwidget.xml: Updated with 2.12 API, fix bug #360679.
	* pygtk-gtkwindow.xml: Updated with 2.12 API.

2007-10-09  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtktreeview.xml:
	* pygtk-gtktreeviewcolumn.xml:
	* pygtk-gtktexttag.xml:
	* pygtk-gtktoolitem.xml:
	* pygtk-gtktextbuffer.xml: Updated with 2.12 API.

2007-10-07  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkstatusicon.xml:
	* pygtk-gtksettings.xml:
	* pygtk-gtkscrolledwindow.xml: Updated with 2.12 API.

2007-09-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkrange.xml: Updated with 2.12 API.

2007-09-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkpagesetup.xml: fixed a wrong parameter name and definition.
	* pygtk-gtkprintsettings.xml:
	* pygtk-gtkplug.xml:
	* pygtk-gtkprinter.xml: Updated with 2.12 API.

2007-09-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkpagesetup.xml:
	* pygtk-gtknotebook.xml:
	* pygtk-gtkmenushell.xml: Updated with 2.12 API.

2007-08-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkmenutoolbutton.xml: Update with 2.12 API.

2007-08-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtktooltip.xml:
	* pygtk-gtk-classes.xml: Add new gtk.Tooltip() docs.

2007-08-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkvolumebutton.xml:
	* pygtk-gtk-classes.xml: Add new gtk.VolumeButton() docs.

2007-08-04  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkiconview.xml: Update with 2.12 API.

2007-07-30  Paul Pogonyshev  <pogonyshev@gmx.net>

	* pygtk-pygtkgenerictreemodel.xml: Document new create_tree_iter()
	and get_user_data().

2007-07-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkicontheme.xml: Update with 2.12 API.

2007-07-28  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkmenuitem.xml
	* pygtk-gtkcombobox.xml