@@ -349,8 +349,7 @@ linkend="method-gtkwidget--size-allocate">size_allocate</link></methodname>
       <methodsynopsis language="python">
 	<methodname><link
 linkend="method-gtkwidget--get-child-requisition">get_child_requisition</link></methodname>
-	<methodparam><parameter
-		       role="keyword">requisition</parameter></methodparam>
+	<methodparam></methodparam>
       </methodsynopsis>
       <methodsynopsis language="python">
 	<methodname><link
@@ -3680,8 +3679,7 @@ subclasses, to assign a size and position to their child widgets.</para>
 
       <programlisting><methodsynopsis language="python">
 	  <methodname>get_child_requisition</methodname>
-	  <methodparam><parameter
-			 role="keyword">requisition</parameter></methodparam>
+	  <methodparam></methodparam>
 	</methodsynopsis></programlisting>
       <variablelist>
 	<varlistentry>
