@@ -1,5 +1,9 @@
 2007-10-18  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
+	* pygtk-gtkwidget.xml: fix bug #365236.
+
+2007-10-18  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
 	* pygtk-gtkactiongroup.xml: fix bug #421575.
 
 2007-10-18  Gian Mario Tagliaretti  <gianmt@gnome.org>
